--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="image\444.png" type="image/x-icon">
     <title>StreetArt</title>
 </head>
 <body>
-    
+    <header>
+		<div class="container">
+		    <div class="body_header">
+		        <nav class="inner-header1">
+			        <font face="Luminari"> 				
+			        <ul>	
+				        <li > <a href="examples.html"> Работы </a> </li>
+			            <li> <a href="information.html"> Информация </a></li>
+			            <li> <a href="intelligence.html">  Сведения </a></li>
+			            <li> <a href="masters.html"> О мастерах </a></li>
+		            </ul>	
+			        </font>
+			        <a><div class="buttonn"> Запись </div></a>
+		            <div class="lines"></div>
+	            </nav>
+            </div>
+       </div>
+    </header>
 </body>
 </html>
