шапка с логотипом, кнопкой и меню

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
 		<div class="container">
 		    <div class="body_header">
+                <div class="header_logo"><img src="image/slaid0.png"  alt=" " ></div>
 		        <nav class="inner-header1">
 			        <font face="Luminari"> 				
 			        <ul>	
