Создание блока content

--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
             </div>
        </div>
     </header>
+
+    <content>
+        <div class="container2">
+            <div class="max1">
+                <img src="image/max1.png" >
+                <div class="text">
+                    <p> Приветствую тебя!</p>
+                    <p>Меня зовут Максим Смирнов, 29 лет и я являюсь основателем пространства по нанесению татуировки <b>"StreetArt Tattoo"</b> <br> в городах Великий Устюг и Котлас.</p>
+                    <p>Посмотри работы, ознакомься с дополнительной информацией не только по работе наших мастеров, но и по татуировкам в целом. Eсли ты заинтересуешься, будем рады принять именно тебя на сеанс!!!</p>
+                    <p> Желаю продуктивного путешествия по нашему сайту!</p>
+                </div>
+            </div>
+        </div>
+    </content>
 </body>
 </html>
