Добавление блоков в content

--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
                     <p> Желаю продуктивного путешествия по нашему сайту!</p>
                 </div>
             </div>
+            <div class="moments">
+            <div class="moments__container">
+                <h2 class="title">
+                    Наши мастера
+                </h2>
+                <div class="masters">	
+                <div class="mast">
+                    <div class="mast-img">
+                        <img src="image/max1.png" alt="">	
+                    </div>
+                    <div class="mastt"> Смирнов Максим. <br> Стаж более 8 лет</div>
+                </div>
+                <div class="mast">
+                    <div class="mast-img">
+                        <img src="image/mast1.png" alt="">
+                    </div>
+                    <div class="mastt"> Жилин Руслан. <br> Стаж 3 года</div>	
+                </div>
+                <div class="mast">
+                    <div class="mast-img">
+                        <img src="image/mast2.png" alt="">
+                    </div>
+                    <div class="mastt"> Хитрова Алена. <br> Стаж 5 года</div>	
+                </div>
+            </div>
+            </div>	
+            </div>
+            <div class="lines"></div>
         </div>
     </content>
 </body>
