Добавление в content различных блоков

--- a/index.html
+++ b/index.html
@@ -66,6 +66,36 @@
             </div>	
             </div>
             <div class="lines"></div>
+            <div class="masters_info">
+                <div class="alena">
+                    <img src="image/mast2.png" alt="">
+                
+                <div class="info">
+					<p>Хитрова Алена Александровна</p>
+					<u>Возраст:</u> 24 года;
+					<br>
+					<u>Стаж работы:</u> 5 лет;
+					<br>
+					<u>Техника работы:</u> Минимализм, Миниатюра, Лайнворк, Трайбл;
+					<br>
+					<u>Телефон:</u> <a href="tel:+79211005335">+7(921)100-53-35</a>;
+                </div>
+            </div>
+            <div class="rusl">
+                <img src="image/mast1.png" alt="" >
+				<div class="info">
+					<p>Жилин Руслан Александрович</p>
+					<u>Возраст:</u> 25 лет;
+					<br>
+					<u>Стаж работы:</u> 3 года;
+					<br>
+					<u>Техника работы:</u> Нео-Традишнл. Ориентал, Олд скул и т.д. ;
+					<br>
+					<u>Телефон:</u> <a href="tel:+79528710125">+7(952)871-01-25</a>;
+					<br>
+				</div>
+            </div>
+            </div>
         </div>
     </content>
 </body>
