Создание подвала footer

--- a/index.html
+++ b/index.html
@@ -98,5 +98,12 @@
             </div>
         </div>
     </content>
+
+    <footer>
+        <div class="footer_info">
+            <a href="https://github.com/NatashaPolnaya">GitHub</a> 
+            <span>&copy;</span> Polnaya Natalia
+        </div>
+    </footer>
 </body>
 </html>
